--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-app-polyfill": "^0.2.1",
     "react-dev-utils": "^7.0.3",
     "react-dom": "^16.8.3",
+    "react-scroll": "^1.7.11",
     "react-waypoint": "^9.0.1",
     "resolve": "1.10.0",
     "sass-loader": "7.1.0",
